# robotic-hand-bci

./: .gitignore  README.md  __init__.py  _debug_pac.py  _test_phase1.py  ablation_config.py  analyze_pooled_subjects.py  augment.py  augmentation.py  baseline_config.py  channel_importance.py  configs.py  confusion_diag.py  cov_features.py  data.py  decision_fusion.py  dvc.yaml  ensemble_joint_decision.py  formatter.py  launch_mc_baseline.sh  launch_phase1.sh  launch_phase1b.sh  launch_phase2_bottleneck.sh  launch_phase2_cp.sh  launch_phase2_fast.sh  launch_reliability_suite.sh  merge_sharded_results.py  metrics.py  model.py  models.py  pyproject.toml  quick_forward_test.py  report_aug_hpo.py  run_ablation_5fold.py  run_aug.py  run_aug_cov.py  run_baseline.py  run_baseline.sh  run_baseline_mc.sh  run_baseline_t7_swa_multiseed.sh  (+6 more)
configs/preprocessing/: eegnet_noica.toml
configs/representation/: multifeature_rsa.toml  refix_filter_grid.toml  spatial_filters.toml  spatial_topomap.toml  topography_physionet.toml  tsne_rdm.toml  tsne_rdm_block.toml
data/: README.md
data/processed/: .gitignore
data/raw/: .gitignore  EEG.dvc  EOG.dvc
docs/: representation.md
model/10fold_npz/: config.py  data.py  main.py  model.py  run_pythondata1_npz.py  summary.txt
model/loso_npz/: config.py  data.py  main.py  model.py  summary.txt  train.py
secondplan/eeg/: _gate.py  acm.py  data.py  model.py  train_evi.py
src/robotic_hand_bci/: __init__.py  cli.py  project.py  stage_config.py
src/robotic_hand_bci/preprocessing/: __init__.py  pipeline.py
(+22 files in other folders)
