[project]
name = "robotic-hand-bci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.1",
    "eeglabio>=0.1.3",
    "matplotlib>=3.10.9",
    "mne>=1.12.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyedflib>=0.1.42",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch==2.7.1+cu128",
]

[project.scripts]
rhbci = "robotic_hand_bci.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
